--- a/client/src/App.css
+++ b/client/src/App.css
@@ -79,16 +79,6 @@ svg {
 }
 
 
-p {
-  opacity: 0;
-  transform: translateY(50px); /* Начальное положение - ниже */
-  animation: floatUp 1s ease-out forwards; /* Анимация всплытия */
-}
-
-
-p {
-  animation-delay: 1.4s; /* Задержка для синхронизации */
-}
 
 @keyframes floatUp {
   to {
@@ -139,7 +129,8 @@ body {
 }
 .upload-form{
   display: flex;
-  justify-content: space-between;
+  
+  justify-content: space-around;
   align-items: center;
 }
 
@@ -233,3 +224,47 @@ form {
 .notification.error {
   border-left: 5px solid #f44336;
 }
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal {
+  background: #1f0707;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  text-align: center;
+}
+
+.modal p {
+  margin-bottom: 20px;
+}
+
+.modal-buttons button {
+  margin: 0 10px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.modal-buttons button:first-child {
+  background-color: #4caf50;
+  color: white;
+}
+
+.modal-buttons button:last-child {
+  background-color: #f44336;
+  color: white;
+}
+
